--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["esbenp.prettier-vscode", "wmaurer.change-case"]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "wmaurer.change-case",
+    "akamud.vscode-theme-onedark"
+  ]
 }
