--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
