--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-slick": "^0.30.2",
     "reactstrap": "8"
   },
