--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-slick": "^0.30.2",
-    "reactstrap": "8"
+    "reactstrap": "8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^8",
